[package]
name = "lsp-document"
version = "0.6.0"
authors = ["Artem Pyanykh <artem.pyanykh@gmail.com>"]
edition = "2021"
description = "Helpers to convert between LSP documents and Rust strings"
readme = "README.md"
repository = "https://github.com/artempyanykh/rust-lsp-document"
license = "MIT"

[dependencies]
lsp-types = "0.95.1"

[dev-dependencies]
pretty_assertions = "1.4.1"